[package]
name = "mdbook-inline-highlighting"
version = "0.1.0"
authors = ["Jonas da Silva"]
edition = "2021"
description = "mdBook preprocessor that enables support for inline highlighting"
repository = "https://github.com/phoenixr-codes/mdbook-inline-highlighting"
license = "MIT"
keywords = ["mdbook", "plugin", "preprocessor"]

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
env_logger = "0.10.0"
log = "0.4.20"
mdbook = "0.4.51"
pulldown-cmark = { version = "0.10.0", default-features = false, features = ["html"] }
pulldown-cmark-to-cmark = "14.0.1"
semver = "1.0.20"
serde_json = "1.0.107"
toml = "0.5.11"
